# contact-control

./: .gitignore  CMakeLists.txt  README.md
config/zeus/: wam4.conf
data/: hybrid_task_datalog_0001.csv  hybrid_task_datalog_0002.csv  hybrid_task_datalog_0003.csv  hybrid_task_datalog_0004.csv  hybrid_task_datalog_0005.csv  hybrid_task_datalog_0006.csv  hybrid_task_datalog_0007.csv  hybrid_task_datalog_0008.csv  hybrid_task_datalog_0009.csv  hybrid_task_datalog_0010.csv  hybrid_task_datalog_0011.csv  hybrid_task_datalog_0012.csv  hybrid_task_datalog_0013.csv  hybrid_task_datalog_0014.csv  hybrid_task_datalog_0015.csv  hybrid_task_datalog_0016.csv  hybrid_task_datalog_0017.csv  hybrid_task_datalog_0018.csv  hybrid_task_datalog_0019.csv  hybrid_task_datalog_0020.csv  hybrid_task_datalog_0021.csv  hybrid_task_datalog_0022.csv
include/: beta_zeus_link.hpp  bt_transformation.hpp  dynamic_external_torque.hpp  dynamic_external_wrench.hpp  dynamics.hpp  external_torque.hpp  external_wrench.hpp  hybrid_task_csv_logger.hpp  jointtorque.hpp  sample_delay.hpp  task_space_controller.hpp  tj_transformation.hpp  utilities.hpp
scripts/: can_init.sh  plot_hybrid_task_csv.py
src/: hybrid_control.cpp
